--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-click         7.1.2  
-Flask         1.1.2  
-itsdangerous  1.1.0  
-Jinja2        2.11.3 
-lxml          4.6.3  
-MarkupSafe    1.1.1  
-pip           18.1    
-setuptools    40.8.0 
-Werkzeug      1.0.1  
+click==7.1.2  
+Flask==1.1.2  
+itsdangerous==1.1.0  
+Jinja2==2.11.3 
+lxml==4.6.3  
+MarkupSafe==1.1.1  
+Werkzeug==1.0.1  
